2008-03-04  Alan D. Salewski  <ASalewski@signatureinfo.com>

	* src/main/perl/bin/bedrock-create-site.in
	(maybe_copy_dist_error_dot_rock_or_die): Copy 'error.rock', not
	  'index.rock', from the Bedrock distribution

	* examples/cli/bedrock-create-site-example.com: new file

	* configure.ac: 
	(ads_PERL_MODULE): new check for Carp
	(ads_PERL_MODULE): new check for Cwd
	(ads_PERL_MODULE): new check for Fcntl
	(ads_PERL_MODULE): new check for File::Basename
	(ads_PERL_MODULE): new check for File::Copy
	(ads_PERL_MODULE): new check for File::Path
	(ads_PERL_MODULE): new check for File::Spec::Functions
	(ads_PERL_MODULE): new check for Getopt::Long
	(ads_PERL_MODULE): new check for Hash::Util
	(ads_PERL_MODULE): new check for Term::ReadKey

	* README: Doc update

	* NEWS: Doc update

	* src/main/perl/bin/bedrock-create-site.in
	(__maybe_create_named_file_or_die):
	- New function name (was formerly __maybe_create_named_index_dot_rock_file_or_die)
	- Refactored to allow for more general application (for use in
	  creating tagx.xml and tagx_apps.xml)
	- Refactored to use named params
	- Checking/creation of symlinks is now optional
	(--overwrite-tagx-dot-xml): new optional command line opt
	(--nooverwrite-tagx-dot-xml): new optional command line opt
	(--overwrite-tagx-apps-dot-xml): new optional command line opt
	(--nooverwrite-tagx-apps-dot-xml): new optional command line opt
	($DO_OVERWRITE_TAGX_DOT_XML): new "overwrite flag
	($DO_OVERWRITE_TAGX_APPS_DOT_XML): new "overwrite flag
	(maybe_create_tagx_dot_xml_or_die): new function
	(maybe_create_tagx_apps_dot_xml_or_die): new function
	($BEDROCK_DIST_PEBBLES_DIR): new var filtered in at build time
	(POD): Cleaned up existing and fleshed out bedrock-create-site(1) man page

	* configure.ac (pebblesdir): New AC_SUBST application
	* src/main/bedrock/pebbles/Makefile.am (pebblesdir): Moved
	  definition to top-level configure.ac file

	* src/main/perl/bin/bedrock-create-site.in (symlink): Added $! to