@@ -63,7 +63,6 @@ use File::Basename qw( basename dirname );
 use File::Copy qw( copy );
 use File::Path qw( mkpath );
 use File::Spec::Functions qw( catdir catfile abs2rel );
-use Hash::Util qw( lock_hash );
 use Term::ReadKey qw( ReadMode );
 
 our $VERSION = '@VERSION@';  # filtered in at build time
@@ -200,7 +199,19 @@ my %REQUIRED_STR_OPTS = (
                                         desc => 'auth db username'
                                       },
                         );
-lock_hash %REQUIRED_STR_OPTS;
+
+
+# Hash::Util isn't part of the Perl core until 5.8.0. At the time of writing
+# (2008-03), SIS still has some 5.6.x installations of Perl laying
+# around. Since this is currently the only feature in Bedrock that would
+# require Perl 5.8.0, we make it opional here.
+eval {
+    require Hash::Util;
+    Hash::Util::lock_hash( \%REQUIRED_STR_OPTS );
+};
+# Ignore $@; if we don't have the Hash::Util module, then the program is just
+# less locked-down.
+
 
 sub print_usage {
     my ($where) = @_;
