@@ -3,6 +3,9 @@
 	* src/main/perl/bin/bedrock-create-site.in
 	(maybe_copy_dist_error_dot_rock_or_die): Copy 'error.rock', not
 	  'index.rock', from the Bedrock distribution
+	(Hash::Util::lock_hash): Change for compatibility with Perl
+	  pre-5.8.x; use of Hash::Util module is now optional, and
+	  dependent on whether or not the module is installed.
 
 	* examples/cli/bedrock-create-site-example.com: new file
 
